--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>NEKOmUNITY</title>
   <link rel="stylesheet" href="styles2.css">
+  <link rel="icon" href="NEKO-removebg-preview.png" type="image/png">
 </head>
 <body>
   <h1>
