--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>NEKOmUNITY</title>
   <link rel="stylesheet" href="styles2.css">
   <link rel="icon" href="NEKO-removebg-preview.png" type="image/png">
+  <style>
+    .story-container {
+      width: 80%;
+      margin: 0 auto;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1>
