--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <img src="1.png" alt="Neko Logo">
+        <h1>Neko</h1> <!-- Your webpage title -->
     </header>
     <nav>
         <ul>
@@ -23,6 +24,7 @@
                     <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x2644fc910131a35ff0727323e05e2df032816f2b" target="_blank">DexTools</a></li>
                     <li><a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x7d3112af24884d8c0e3d0403eccdd3d3516bdbd1" target="_blank">Uniswap</a></li>
                     <li><a href="https://stocktwits.com/NEKOmUNITY" target="_blank">Stocktwits</a></li>
+                    <li><a href="https://coinmarketleague.com" target="_blank">CoinMarketLeague</a></li> <!-- New link -->
                 </ul>
             </li>
             <li><a href="Neko-Road-Map.pdf" target="_blank">Roadmap</a></li>
@@ -37,5 +39,4 @@
 </body>
 
 </html>
-
 
