--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neko</title>
     <link rel="stylesheet" href="styles2.css">
-    <link rel="icon" href="nekoneko.png" type="image/png"> <!-- Favicon meta tag -->
+    <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 
 <body>
     <header>
         <img src="1.png" alt="Neko Logo">
-        
     </header>
     <nav>
         <ul>
@@ -24,10 +23,11 @@
                     <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x2644fc910131a35ff0727323e05e2df032816f2b" target="_blank">DexTools</a></li>
                     <li><a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x7d3112af24884d8c0e3d0403eccdd3d3516bdbd1" target="_blank">Uniswap</a></li>
                     <li><a href="https://stocktwits.com/NEKOmUNITY" target="_blank">Stocktwits</a></li>
-                    <li><a href="https://coinmarketleague.com/coin/Neko-coin" target="_blank">CoinMarketLeague</a></li> <!-- New link -->
+                    <li><a href="https://coinmarketleague.com/coin/Neko-coin" target="_blank">CoinMarketLeague</a></li>
                 </ul>
             </li>
             <li><a href="Neko-Road-Map.pdf" target="_blank">Roadmap</a></li>
+            <li><a href="NekosFrens.html">Neko's Frens</a></li> <!-- New link to the second page -->
         </ul>
     </nav>
     <main>
