--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
+        <img src="NEKO-removebg-preview.png" alt="Logo" class="logo">
         <button id="connectWalletButton">Connect Wallet</button>
         <button id="mintButton" disabled>Mint NFTs</button>
     </div>
