--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT Minting App</title>
+    <title>Neko's Frens</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <img src="NEKO-removebg-preview.png" alt="Logo" class="logo">
+        <img src="1.png" alt="Logo" class="logo">
         <button id="connectWalletButton">Connect Wallet</button>
         <button id="mintButton" disabled>Mint NFTs</button>
     </div>
