--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </li>
             <li><a href="Neko-Road-Map.pdf" target="_blank">Roadmap</a></li>
-            <li><a href="NekosFrens.html">Neko's Frens</a></li> <!-- New link to the second page -->
+            //<li><a href="NekosFrens.html">Neko's Frens</a></li> <!-- New link to the second page -->
         </ul>
     </nav>
     <main>
