--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neko's Frens</title>
     <link rel="stylesheet" href="styles2.css">
+    <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
     <div class="container">
