--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neko's Frens</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Update CSS file name -->
     <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
     <div class="container">
         <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
-        <button id="connectWalletButton">Connect Wallet</button>
-        <button id="mintButton" disabled>Mint NFTs</button>
+        <div class="button-container">
+            <button id="connectWalletButton" class="button animated-button">Connect Wallet</button>
+            <button id="mintButton" class="button animated-button" disabled>Mint NFTs</button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script src="app.js"></script>
