--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neko's Frens</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Update CSS file name -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
@@ -16,6 +16,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
