--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neko's Frens</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles2.css">
     <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
     <div class="container">
         <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
-        <div class="button-container">
-            <button id="connectWalletButton" class="button animated-button">Connect Wallet</button>
-            <button id="mintButton" class="button animated-button" disabled>Mint NFTs</button>
-        </div>
+        <button id="connectWalletButton">Connect Wallet</button>
+        <button id="mintButton" disabled>Mint NFTs</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="app.js"></script> <!-- Link to your JavaScript file -->
+    <script src="app.js"></script>
 </body>
 </html>
