--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neko's Frens</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="nekoneko.png" type="image/png">
+  <title>NFT Minting</title>
 </head>
 <body>
-    <div class="container">
-        <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
-        <button id="connectWalletButton">Connect Wallet</button>
-        <button id="mintButton" disabled>Mint NFTs</button>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="app.js"></script>
+  <h1>NFT Minting</h1>
+  <div id="wallet-info">
+    <p>Connected Wallet Address: <span id="wallet-address"></span></p>
+    <p>Balance: <span id="wallet-balance"></span> MATIC</p>
+  </div>
+  <button id="connect-wallet">Connect Wallet</button>
+  <form id="mint-form">
+    <label for="quantity">Quantity:</label>
+    <input type="number" id="quantity" name="quantity" min="1" max="26" required>
+    <button type="submit" id="mint-button" disabled>Mint NFTs</button>
+  </form>
+  <p id="price-info">Price: 50 MATIC</p>
+
+  <script src="web3.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
