--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NFT Minting</title>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neko's Frens</title>
+  <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
-  <h1>NFT Minting</h1>
   <div id="wallet-info">
     <p>Connected Wallet Address: <span id="wallet-address"></span></p>
     <p>Balance: <span id="wallet-balance"></span> MATIC</p>
