--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
+  <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
   <div id="wallet-info">
     <p>Connected Wallet Address: <span id="wallet-address"></span></p>
     <p>Balance: <span id="wallet-balance"></span> MATIC</p>
