--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -14,11 +14,11 @@
     <p>Connected Wallet Address: <span id="wallet-address"></span></p>
     <p>Balance: <span id="wallet-balance"></span> MATIC</p>
   </div>
-  <button id="connect-wallet">Connect Wallet</button>
+  <button id="connectWalletButton">Connect Wallet</button>
   <form id="mint-form">
     <label for="quantity">Quantity:</label>
     <input type="number" id="quantity" name="quantity" min="1" max="26" required>
-    <button type="submit" id="mint-button" disabled>Mint NFTs</button>
+    <button type="submit" id="mintButton" disabled>Mint NFTs</button>
   </form>
   <p id="price-info">Price: 50 MATIC</p>
 
