--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-  <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neko's Frens</title>
-  <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="nekoneko.png" type="image/png">
-  <script src="app.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Neko's Frens NFT Minting</title>
+   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
   <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
-  <div id="wallet-info">
-    <p>Connected Wallet Address: <span id="wallet-address"></span></p>
-    <p>Balance: <span id="wallet-balance"></span> MATIC</p>
-  </div>
-  <button id="connectWalletButton">Connect Wallet</button>
-  <form id="mint-form">
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" name="quantity" min="1" max="26" required>
-    <button type="submit" id="mintButton" disabled>Mint NFTs</button>
-  </form>
-  <p id="price-info">Price: 50 MATIC</p>
-
+   <div class="container">
+       <h1>Neko's Frens NFT Minting</h1>
+       <button id="connectWallet">Connect Wallet</button>
+       <button id="mintNFT">Mint NFT</button>
+   </div>
+   <script src="app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
