--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -3,14 +3,13 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Neko's Frens NFT Minting</title>
+   <title> Neko's Frens </title>
    <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
   <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
    <div class="container">
-       <h1>Neko's Frens NFT Minting</h1>
        <button id="connectWallet">Connect Wallet</button>
        <button id="mintNFT">Mint NFT</button>
    </div>
