--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.2/web3.min.js"></script>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title> Neko's Frens </title>
-   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="nekoneko.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neko's Frens</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="nekoneko.png" type="image/png">
 </head>
 <body>
-  <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
-   <div class="container">
-       <button id="connectWallet">Connect Wallet</button>
-       <button id="mintNFT">Mint NFT</button>
-   </div>
-   <script src="app.js"></script>
+    <div class="container">
+        <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
+        <button id="connectWalletButton">Connect Wallet</button>
+        <button id="mintButton" disabled>Mint NFTs</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
+    <script src="app.js"></script>
+    <script>
+        // Wrap the code in an event listener for DOMContentLoaded
+        document.addEventListener('DOMContentLoaded', function () {
+            // Call the init function from app.js after the DOM has loaded
+            init();
+        });
+    </script>
 </body>
 </html>
+
+
+
 
 
 
