--- a/NekosFrens.html
+++ b/NekosFrens.html
@@ -12,6 +12,7 @@
         <img src="9tNjesCh_400x400.jpg" alt="Logo" class="logo">
         <button id="connectWalletButton">Connect Wallet</button>
         <button id="mintButton" disabled>Mint NFTs</button>
+        <p id="maticAmount">50 MATIC</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script src="app.js"></script>
