--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#">Links</a>
                 <ul class="dropdown-menu">
                     <li><a href="https://t.me/NEKO_Community" target="_blank">Telegram</a></li>
+                    <li><a href="https://www.scatter.art/neko-s-frens?tab=mint" target="_blank">Neko's Frens</a></li>
                     <li><a href="https://twitter.com/NEKOmUNITY_" target="_blank">𝕏</a></li>
                     <li><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x2644fc910131a35ff0727323e05e2df032816f2b" target="_blank">DexTools</a></li>
                     <li><a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x7d3112af24884d8c0e3d0403eccdd3d3516bdbd1" target="_blank">Uniswap</a></li>
